--- a/src/common.props
+++ b/src/common.props
@@ -1,5 +1,5 @@
 <Project>
-<PropertyGroup>
+  <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Authors>Weloveloli</Authors>
@@ -9,15 +9,15 @@
     <Product>AVOne</Product>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-<PropertyGroup Label="Common NuGet Properties">
+  <PropertyGroup Label="Common NuGet Properties">
     <Copyright>Copyright (c) 2023 Weloveloli</Copyright>   
     <PackageIcon>logo.jpg</PackageIcon>
     <PackageTags>AVOne</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PackageLicenseExpression>apache-2.0</PackageLicenseExpression>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/weloveloli/AVOne</PackageProjectUrl>
-</PropertyGroup>
+  </PropertyGroup>
 
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)/../img/logo.jpg" Visible="false" Pack="true" PackagePath="" />
