--- a/src/AVOne.Core/AVOne.Core.csproj
+++ b/src/AVOne.Core/AVOne.Core.csproj
@@ -3,8 +3,13 @@
   <PropertyGroup>
     <PackageId>AVOne.Core</PackageId>
     <IsPackable>true</IsPackable>
+    <RootNamespace>AVOne</RootNamespace>
+    <Description>Core lib for AVOne</Description>
     <!--Add support for sourcelink-->
     <IncludeSymbols>true</IncludeSymbols>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+  </ItemGroup>
 </Project>
