--- a/src/Test/AVOne.Impl.Test/AVOne.Impl.Test.csproj
+++ b/src/Test/AVOne.Impl.Test/AVOne.Impl.Test.csproj
@@ -19,6 +19,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xunit.SkippableFact" Version="1.4.13" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\AVOne.Impl\AVOne.Impl.csproj" />
   </ItemGroup>
 
 </Project>
