--- a/src/AVOne.Tool/AVOne.Tool.csproj
+++ b/src/AVOne.Tool/AVOne.Tool.csproj
@@ -4,6 +4,9 @@
     <OutputType>Exe</OutputType>
     <Nullable>enable</Nullable>
     <AssemblyName>AVOneTool</AssemblyName>
+    <IsPackable>true</IsPackable>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>AVOneTool</ToolCommandName>
   </PropertyGroup>
   <ItemGroup>
     <None Remove="Resources\Configuration\logging.json" />
@@ -26,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AVOne.Core\AVOne.Core.csproj" />
+    <ProjectReference Include="..\AVOne.Impl\AVOne.Impl.csproj" />
   </ItemGroup>
 
   <ItemGroup>
