--- a/src/AVOne.Impl/AVOne.Impl.csproj
+++ b/src/AVOne.Impl/AVOne.Impl.csproj
@@ -10,5 +10,8 @@
   <ItemGroup>
     <ProjectReference Include="..\AVOne.Core\AVOne.Core.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Providers\Base\" />
+  </ItemGroup>
 
 </Project>
