--- a/src/Test/AVOne.Impl.Test/AVOne.Impl.Test.csproj
+++ b/src/Test/AVOne.Impl.Test/AVOne.Impl.Test.csproj
@@ -30,19 +30,19 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="files\stars-507-C-backdrop.jpg">
+    <None Update="files\movie\stars-507-C-backdrop.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="files\stars-507-C-landscape.jpg">
+    <None Update="files\movie\stars-507-C-landscape.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="files\stars-507-C-poster.jpg">
+    <None Update="files\movie\stars-507-C-poster.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="files\stars-507-C.mp4">
+    <None Update="files\movie\stars-507-C.mp4">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="files\stars-507-C.nfo">
+    <None Update="files\movie\stars-507-C.nfo">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="files\testconfig.json">
