--- a/src/AVOne.Impl/AVOne.Impl.csproj
+++ b/src/AVOne.Impl/AVOne.Impl.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="DotNet.Glob" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
