--- a/src/Test/AVOne.Impl.Test/AVOne.Impl.Test.csproj
+++ b/src/Test/AVOne.Impl.Test/AVOne.Impl.Test.csproj
@@ -3,6 +3,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\AVOne.Impl\AVOne.Impl.csproj" />
+    <ProjectReference Include="..\..\AVOne.Providers.Jellyfin\AVOne.Providers.Jellyfin.csproj" />
   </ItemGroup>
 
   <ItemGroup>
