--- a/src/AVOne.Tool/Properties/launchSettings.json
+++ b/src/AVOne.Tool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "AVOne.Tool": {
       "commandName": "Project",
-      "commandLineArgs": "scan\r\nZ:\\hentai\\未分类"
+      "commandLineArgs": "sm\r\nZ:\\hentai\\无码\\010318_627.mp4"
     }
   }
 }
