--- a/source/AVOne.Tool/AVOne.Tool.csproj
+++ b/source/AVOne.Tool/AVOne.Tool.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
     <Import Project="../common.props" />
     <PropertyGroup>
         <OutputType>Exe</OutputType>
@@ -8,11 +8,14 @@
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>AVOneTool</ToolCommandName>
     </PropertyGroup>
-
     <ItemGroup>
+      <None Remove="Resources\Configuration\logging.json" />
+    </ItemGroup>
+    <ItemGroup>
+      <EmbeddedResource Include="Resources\Configuration\logging.json" />
+    </ItemGroup>
+    <ItemGroup>       
         <PackageReference Include="CommandLineParser" Version="2.9.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
         <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
         <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
         <PackageReference Include="Serilog.Settings.Configuration" Version="3.4.0" />
@@ -20,12 +23,14 @@
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
         <PackageReference Include="ConsoleTables" Version="2.4.2" />
-        <PackageReference Include="Furion.Tools.CommandLine" Version="$(FurionVersion)" />
-    </ItemGroup>
-
+    </ItemGroup> 
     <ItemGroup>
-        <ProjectReference Include="..\AVOne.Core\AVOne.Core.csproj" />
         <ProjectReference Include="..\AVOne.Impl\AVOne.Impl.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+      <None Update="appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
