--- a/source/AVOne.Web.Entry/AVOne.Web.Entry.csproj
+++ b/source/AVOne.Web.Entry/AVOne.Web.Entry.csproj
@@ -1,16 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
-
-
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<SatelliteResourceLanguages>en-US</SatelliteResourceLanguages>
 		<PublishReadyToRunComposite>true</PublishReadyToRunComposite>
+        <IsPackable>true</IsPackable>
 	</PropertyGroup>
-
-
-
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
 			<PrivateAssets>all</PrivateAssets>
