--- a/source/AVOne.Tool/AVOne.Tool.csproj
+++ b/source/AVOne.Tool/AVOne.Tool.csproj
@@ -22,10 +22,23 @@
         <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
         <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-        <PackageReference Include="ConsoleTables" Version="2.4.2" />
+        <PackageReference Include="Spectre.Console" Version="0.46.0" />
     </ItemGroup> 
     <ItemGroup>
         <ProjectReference Include="..\AVOne.Impl\AVOne.Impl.csproj" />
+    </ItemGroup> 
+    <ItemGroup>
+      <Compile Update="Resources\Resource.Designer.cs">
+        <DesignTime>True</DesignTime>
+        <AutoGen>True</AutoGen>
+        <DependentUpon>Resource.resx</DependentUpon>
+      </Compile>
+    </ItemGroup> 
+    <ItemGroup>
+      <EmbeddedResource Update="Resources\Resource.resx">
+        <Generator>PublicResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
     <ItemGroup>
       <None Update="appsettings.json">
