--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 /source/AVOne.Tool/Properties/launchSettings.json
+/src/AVOne.Tool/Properties/launchSettings.json
