--- a/src/AVOne.Impl/AVOne.Impl.csproj
+++ b/src/AVOne.Impl/AVOne.Impl.csproj
@@ -12,6 +12,10 @@
         <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
         <PackageReference Include="DotNet.Glob" Version="3.1.3" />
         <PackageReference Include="My.Extensions.Localization.Json" Version="3.0.1" />
+        <PackageReference Include="MimeTypes" Version="2.4.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
         <None Include="$(LangResourcePath)/**/*.json">
