--- a/src/AVOne.Common/AVOne.Common.csproj
+++ b/src/AVOne.Common/AVOne.Common.csproj
@@ -16,6 +16,10 @@
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Furion" Version="4.8.6.11" />
+        <PackageReference Include="MimeTypes" Version="2.4.1">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
 </Project>
