--- a/src/Test/AVOne.Providers.Official.Tests/AVOne.Providers.Official.Tests.csproj
+++ b/src/Test/AVOne.Providers.Official.Tests/AVOne.Providers.Official.Tests.csproj
@@ -3,4 +3,9 @@
    <ItemGroup>
      <ProjectReference Include="..\..\AVOne.Providers.Official\AVOne.Providers.Official.csproj" />
    </ItemGroup>
+   <ItemGroup>
+     <None Update="websites\missav.html">
+       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+     </None>
+   </ItemGroup>
 </Project>
