--- a/src/AVOne.Core/AVOne.Core.csproj
+++ b/src/AVOne.Core/AVOne.Core.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../common.props" />
-  <PropertyGroup>
-    <PackageId>AVOne.Core</PackageId>
-    <IsPackable>true</IsPackable>
-    <RootNamespace>AVOne</RootNamespace>
-    <Description>Core lib for AVOne</Description>
-    <!--Add support for sourcelink-->
-    <IncludeSymbols>true</IncludeSymbols>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <PackageId>AVOne.Core</PackageId>
+        <IsPackable>true</IsPackable>
+        <RootNamespace>AVOne</RootNamespace>
+        <Description>Core lib for AVOne</Description>
+        <!--Add support for sourcelink-->
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Nullable>enable</Nullable>
+        <MinVerTagPrefix>common-</MinVerTagPrefix>
+        <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
+    </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
