--- a/.github/workflows/tool.yml
+++ b/.github/workflows/tool.yml
@@ -2,12 +2,15 @@ name: ci
 
 on:
   push:
+    branches:
+      - 'releases/**'
     paths-ignore:
     - 'doc/**'
     - 'img/**'
-    - 'changelog.md'
-    - 'readme.md'
-  pull_request:
+    - '*.md'
+    - 'templates/**'
+    tags:
+    - tool-.*
 
 jobs:
   build:
@@ -29,4 +32,4 @@ jobs:
       shell: bash
       run: |
         dotnet tool install -g dotnet-releaser
-        dotnet-releaser run --nuget-token "${{secrets.NUGET_TOKEN}}" --github-token "${{secrets.GITHUB_TOKEN}}" source/dotnet-releaser.toml
+        dotnet-releaser run --nuget-token "${{secrets.NUGET_TOKEN}}" --github-token "${{secrets.GITHUB_TOKEN}}" src/dotnet-releaser.toml
