--- a/src/AVOne.Tool/AVOne.Tool.csproj
+++ b/src/AVOne.Tool/AVOne.Tool.csproj
@@ -10,6 +10,7 @@
         <IncludeSymbols>False</IncludeSymbols>
         <MinVerTagPrefix>tool-</MinVerTagPrefix>
         <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
+        <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
     </PropertyGroup>
     <ItemGroup>
         <Compile Remove="Helper\**" />
