--- a/src/common.props
+++ b/src/common.props
@@ -16,6 +16,7 @@
     <DebugSymbols>true</DebugSymbols>
     <Optimize>false</Optimize>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Label="Common NuGet Properties">
     <Copyright>Copyright (c) 2023 Weloveloli</Copyright>   
@@ -27,6 +28,9 @@
     <PackageProjectUrl>https://github.com/weloveloli/AVOne</PackageProjectUrl>
   </PropertyGroup>
 
+  <ItemGroup Condition="'$(Configuration)'=='Debug'">
+    <Compile Include="$(MSBuildThisFileDirectory)/SharedVersion.cs" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="$(MSBuildThisFileDirectory)/../img/logo.png" Visible="false" Pack="true" PackagePath="" />
     <None Include="$(MSBuildThisFileDirectory)/../README.md" Visible="false" Pack="true" PackagePath="" />
