--- a/src/AVOne.Server/AVOne.Server.csproj
+++ b/src/AVOne.Server/AVOne.Server.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-  <Import Project="../common.props" />
   <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
