--- a/.gitignore
+++ b/.gitignore
@@ -350,3 +350,4 @@ MigrationBackup/
 .ionide/
 /source/AVOne.Tool/Properties/launchSettings.json
 /src/AVOne.Tool/Properties/launchSettings.json
+/src/artifacts-dotnet-releaser
