--- a/src/AVOne.Tool/AVOne.Tool.csproj
+++ b/src/AVOne.Tool/AVOne.Tool.csproj
@@ -8,7 +8,7 @@
         <PackAsTool>true</PackAsTool>
         <ToolCommandName>AVOneTool</ToolCommandName>
         <IncludeSymbols>False</IncludeSymbols>
-        <MinVerTagPrefix>tool-</MinVerTagPrefix>
+        <!--<MinVerTagPrefix>tool-</MinVerTagPrefix>-->
         <MinVerIgnoreHeight>true</MinVerIgnoreHeight>
         <PublishReadyToRunComposite>true</PublishReadyToRunComposite>
     </PropertyGroup>
