--- a/src/common.props
+++ b/src/common.props
@@ -20,7 +20,7 @@
   </PropertyGroup>
   <PropertyGroup Label="Common NuGet Properties">
     <Copyright>Copyright (c) 2023 Weloveloli</Copyright>   
-    <PackageIcon>logo.jpg</PackageIcon>
+    <PackageIcon>logo.png</PackageIcon>
     <PackageTags>AVOne</PackageTags>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
