--- a/src/AVOne.Impl/appsettings.json
+++ b/src/AVOne.Impl/appsettings.json
@@ -5,5 +5,12 @@
     "SupportedCultures": [ "zh-CN", "en-US" ], // 配置支持的语言列表
     "DefaultCulture": "zh-CN", // 配置默认语言，如果不配置，取 SupportedCultures 的第一项
     "AssemblyName": "AVOne.Impl"
-  }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
