--- a/src/AVOne.Server/AVOne.Server.csproj
+++ b/src/AVOne.Server/AVOne.Server.csproj
@@ -1,8 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+  <Import Project="../common.props" />
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+	<AssemblyName>avone</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
