Update docker file

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,6 @@
 ARG DOTNET_VERSION=7.0
 
-FROM debian:stable-slim as app
+FROM mcr.microsoft.com/dotnet/runtime:7.0 as app
 
 ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update && apt-get install -y ffmpeg
@@ -11,7 +11,7 @@ RUN mkdir -p /data /media /download\
 FROM mcr.microsoft.com/dotnet/sdk:${DOTNET_VERSION} as builder
 WORKDIR /repo
 COPY . .
-RUN dotnet publish AVOne.Server --disable-parallel --configuration Release --output="/avone" --self-contained --runtime linux-x64 -p:DebugSymbols=false -p:DebugType=none
+RUN dotnet publish AVOne.Server --disable-parallel --configuration Release --output="/avone" -p:DebugSymbols=false -p:DebugType=none
 ENV LC_ALL en_US.UTF-8
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
@@ -23,7 +23,7 @@ ENV ASPNETCORE_URLS=http://+:8099
 EXPOSE 8099
 VOLUME /data /media /download
 WORKDIR /avone
-ENTRYPOINT ["./avone", \
+ENTRYPOINT ["dotnet","./avone.dll", \
     "--data-dir", "/data", \
     "--ffmpeg", "/usr/bin/ffmpeg"]
 HEALTHCHECK --interval=30s --timeout=30s --start-period=10s --retries=3 \
