--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,6 +1,6 @@
 ARG DOTNET_VERSION=7.0
 
-FROM mcr.microsoft.com/dotnet/runtime-deps:${DOTNET_VERSION}-ubuntu as app
+FROM mcr.microsoft.com/dotnet/runtime-deps:${DOTNET_VERSION}-jammy as app
 
 RUN apt update && apt install ffmpeg
 RUN mkdir -p /data /media /download \
