fix http client names

--- a/src/AVOne.Server/AVOne.Server.csproj
+++ b/src/AVOne.Server/AVOne.Server.csproj
@@ -2,6 +2,7 @@
   <Import Project="../common.props" />
   <PropertyGroup>
 	<AssemblyName>avone</AssemblyName>
+      <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
