--- a/src/AVOne.Server/AVOne.Server.csproj
+++ b/src/AVOne.Server/AVOne.Server.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <Import Project="../common.props" />
   <PropertyGroup>
-	<AssemblyName>avone</AssemblyName>
-      <Nullable>enable</Nullable>
+	<AssemblyName>AVOneServer</AssemblyName>
+    <Nullable>enable</Nullable>
+    <IsPackable>true</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
