--- a/src/dotnet-releaser.toml
+++ b/src/dotnet-releaser.toml
@@ -1,12 +1,20 @@
 [msbuild]
 project = "src.sln"
+
 [github]
 user = "weloveloli"
 repo = "AVOne"
 version_prefix = "v"
+
 [msbuild.properties]
 PublishTrimmed = false
 PublishReadyToRun = false
+
+[brew]
+publish = false
+
+[scoop]
+publish = false
 
 profile = "custom"
 # Create zip files only for Windows platforms
