Add Http Downloader Add extractor for hanime

--- a/src/AVOne.Providers.Official/AVOne.Providers.Official.csproj
+++ b/src/AVOne.Providers.Official/AVOne.Providers.Official.csproj
@@ -6,6 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
     <ItemGroup>
+      <PackageReference Include="Fizzler.Systems.HtmlAgilityPack" />
+    </ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\AVOne.Core\AVOne.Core.csproj" />
         <ProjectReference Include="..\AVOne.Common\AVOne.Common.csproj" />
     </ItemGroup>
