--- a/src/dotnet-releaser.toml
+++ b/src/dotnet-releaser.toml
@@ -10,6 +10,7 @@ version_prefix = "v"
 [msbuild.properties]
 PublishTrimmed = false
 PublishReadyToRun = false
+PublishSingleFile = false
 
 [brew]
 publish = false
