--- a/src/AVOne.Tool/AVOne.Tool.csproj
+++ b/src/AVOne.Tool/AVOne.Tool.csproj
@@ -18,6 +18,9 @@
         <None Remove="Helper\**" />
     </ItemGroup>
     <ItemGroup>
+      <PackageReference Include="System.Linq.Async" />
+    </ItemGroup>
+    <ItemGroup>
         <ProjectReference Include="..\AVOne.Core\AVOne.Core.csproj" />
         <ProjectReference Include="..\AVOne.Impl\AVOne.Impl.csproj" />
     </ItemGroup>
