--- a/src/AVOne.Impl/AVOne.Impl.csproj
+++ b/src/AVOne.Impl/AVOne.Impl.csproj
@@ -48,4 +48,7 @@
       <EmbeddedResource Include="Configuration\logging.console.json" />
       <EmbeddedResource Include="Configuration\logging.json" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Scripts\" />
+    </ItemGroup>
 </Project>
