--- a/src/AVOne.Impl/appsettings.json
+++ b/src/AVOne.Impl/appsettings.json
@@ -6,5 +6,6 @@
     "DefaultCulture": "zh-CN", // 配置默认语言，如果不配置，取 SupportedCultures 的第一项
     "AssemblyName": "AVOne.Impl"
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*"
 }
