--- a/src/AVOne.Impl/AVOne.Impl.csproj
+++ b/src/AVOne.Impl/AVOne.Impl.csproj
@@ -35,6 +35,11 @@
         </None>
     </ItemGroup>
     <ItemGroup>
+      <Compile Remove="Scripts\**" />
+      <EmbeddedResource Remove="Scripts\**" />
+      <None Remove="Scripts\**" />
+    </ItemGroup>
+    <ItemGroup>
         <None Remove="appsettings.json" />
         <None Remove="Configuration\logging.console.json" />
         <None Remove="Configuration\logging.json" />
@@ -47,8 +52,5 @@
     <ItemGroup>
       <EmbeddedResource Include="Configuration\logging.console.json" />
       <EmbeddedResource Include="Configuration\logging.json" />
-    </ItemGroup>
-    <ItemGroup>
-      <Folder Include="Scripts\" />
     </ItemGroup>
 </Project>
