--- a/src/AVOne.Server/Properties/launchSettings.json
+++ b/src/AVOne.Server/Properties/launchSettings.json
@@ -7,7 +7,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7334;http://localhost:8099"
+      "applicationUrl": "https://localhost:7334"
     },
     "IIS Express": {
       "commandName": "IISExpress",
